// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader[Base] should render correctly  1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable cs88pmz soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper cd43w9 soui-select-compressed-wrapper c-7vjtar soui-select-multiple-result-wrapper c-7a22yf soui-select-multiple-compressed-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-3t4ctn soui-cascader-compressed-icon cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 32px; width: 632px;"
>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper c-447lrg soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="-1"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="cqy5d2w soui-cascader-wrapper c-447lrg soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="-1"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <span
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              jiangsu
            </span>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
            data-soui-type="dark"
            style="opacity: 1;"
          >
            <span
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              nanjing
            </span>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about filter 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="cu9dykw soui-select-input-mirror"
          />
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="cu9dykw soui-select-input-mirror"
          />
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about finalDismiss 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about hideTag 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about innerTitle 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper c-9hu0ue soui-cascader-wrapper-inner-title clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-o6szqp soui-inner-title-wrapper"
      >
        <div
          class="c4kxj2s soui-inner-title-title cv1qspd soui-inner-title-top"
        >
          Inner Title
        </div>
        <div
          class="c4irvcz soui-inner-title-place"
        >
          <div
            class="c4kxj2s soui-inner-title-title"
          >
            Inner Title
          </div>
        </div>
        <div
          class="c-yu7nrf soui-inner-title-content"
        >
          <div
            class="c-ffoinc soui-cascader-result"
          >
            <div
              class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
            >
              <span
                class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about loader 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="c-ggxw0v soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        模式 0
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        模式 1
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        模式 2
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        模式 3
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        模式 4
      </span>
    </div>
  </div>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable cs88pmz soui-cascader-multiple"
        data-soui-input-border="true"
        style="width: 300px;"
        tabindex="0"
      >
        <div
          class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="c-ffoinc soui-cascader-result"
          >
            <div
              class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
            >
              <span
                class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
        </div>
        <span
          class="cpp7mbr soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <pre
      style="flex: 1; margin: 10px; background: rgb(29, 29, 29); color: rgb(148, 213, 252); border-radius: 4px; padding: 10px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <code
          style="color: rgb(93, 142, 78);"
        >
          <span>
            /
          </span>
          <span>
            /
          </span>
           DataItem[]
        </code>
      </div>
      <code
        style="color: rgb(117, 117, 117);"
      >
        no data
      </code>
    </pre>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about noRepeat 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable cs88pmz soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper cd43w9 soui-select-compressed-wrapper c-7vjtar soui-select-multiple-result-wrapper c-7a22yf soui-select-multiple-compressed-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="c-3t4ctn soui-cascader-compressed-icon cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about renderResult 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about tip 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper c3g8ds soui-cascader-wrapper-error clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper c3g8ds soui-cascader-wrapper-error clnszpo soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
    <div
      class=""
      style=" position: absolute; top: 0px; left: 0px; width: 100% "
    >
      <div
        class="c-q8zng5 soui-popover-wrapper cvd4ktx soui-popover-wrapper-open"
        data-soui-position="bottom-left"
        data-soui-type="error"
        style="position: absolute; z-index: 1060; left: 0px; top: 0px;"
      >
        <div
          class="c-30v18f soui-popover-arrow"
        />
        <div
          class="cy4pqi9 soui-popover-content c-kpki4r soui-popover-text"
          style="min-width: 200px; max-width: 400px;"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about trigger 1`] = `
<div>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <span
            class="c-mt24py soui-select-placeholder c-pjllh2 soui-select-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <div
            class="c9p1dj5 soui-select-tag cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
            style="opacity: 1;"
          >
            <span
              class="c-6g68ga soui-tag-wrapper c4kb4eu soui-tag-inline"
            >
              Unmatched: shanghai
            </span>
            <div
              class="c-pp0r9o soui-tag-close-icon"
            >
              <span
                class="c98mzgf soui-tag-close-icon-wrapper"
              >
                <svg
                  height="10"
                  viewBox="0 0 10 10"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about wide 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="c3d039 soui-cascader-wrapper-empty cqy5d2w soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="c-jvtlwl soui-cascader-result-wrapper c-lgau0e soui-cascader-wrapper-padding-box c-w1o8xx soui-cascader-wrapper-inner-title-top ckz1gqt soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c-ffoinc soui-cascader-result"
      >
        <div
          class="cst20xc soui-select-result-text-wrapper c-7vjtar soui-select-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="cu9dykw soui-select-input-mirror"
          />
        </div>
      </div>
    </div>
    <span
      class="cpp7mbr soui-cascader-arrow-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
